修改App Resource 迁移至Mybatis Flex