@@ -1,51 +1,49 @@
 package com.cmsr.onebase.module.app.build.service.appresource;
 
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
-import com.cmsr.onebase.module.app.build.util.PageUtils;
-import com.cmsr.onebase.module.app.core.dal.dataobject.appresource.PageSetPageDO;
-import com.cmsr.onebase.module.app.core.dto.appresource.*;
-import com.cmsr.onebase.module.app.core.enums.appresource.PageEnum;
-import com.cmsr.onebase.module.app.core.enums.appresource.ViewEnmu;
-import org.anyline.data.param.ConfigStore;
-import org.anyline.data.param.init.DefaultConfigStore;
-import org.anyline.entity.Compare;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import com.cmsr.onebase.framework.common.exception.util.ServiceExceptionUtil;
 import com.cmsr.onebase.framework.common.util.object.BeanUtils;
+import com.cmsr.onebase.module.app.build.util.PageUtils;
 import com.cmsr.onebase.module.app.core.dal.database.appresource.AppPageRepository;
 import com.cmsr.onebase.module.app.core.dal.database.appresource.AppPageSetPageRepository;
 import com.cmsr.onebase.module.app.core.dal.database.appresource.AppPageSetRepository;
 import com.cmsr.onebase.module.app.core.dal.database.menu.AppMenuRepository;
 import com.cmsr.onebase.module.app.core.dal.dataobject.appresource.PageDO;
 import com.cmsr.onebase.module.app.core.dal.dataobject.appresource.PageSetDO;
+import com.cmsr.onebase.module.app.core.dal.dataobject.appresource.PageSetPageDO;
 import com.cmsr.onebase.module.app.core.dal.dataobject.menu.MenuDO;
+import com.cmsr.onebase.module.app.core.dto.appresource.*;
 import com.cmsr.onebase.module.app.core.enums.appresource.AppResourceErrorCodeConstants;
-
+import com.cmsr.onebase.module.app.core.enums.appresource.PageEnum;
+import com.cmsr.onebase.module.app.core.enums.appresource.ViewEnmu;
 import jakarta.annotation.Resource;
+import org.anyline.data.param.ConfigStore;
+import org.anyline.data.param.init.DefaultConfigStore;
+import org.anyline.entity.Compare;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class PageServiceImpl implements PageService {
 
     @Resource
-    private AppPageRepository pageDataRepository;
+    private AppPageRepository pageRepository;
 
     @Resource
-    private AppPageSetPageRepository pageSetPageDataRepository;
+    private AppPageSetPageRepository pageSetPageRepository;
 
     @Resource
-    private AppPageSetRepository pageSetDataRepository;
+    private AppPageSetRepository pageSetRepository;
 
     @Resource(name = "appMenuRepository")
     private AppMenuRepository menuDataRepository;
 
     @Override
     public PageRespDTO getPage(Long pageId) {
-        PageDO pageDO = pageDataRepository.findById(pageId);
+        PageDO pageDO = pageRepository.getById(pageId);
         if (pageDO == null) {
             throw ServiceExceptionUtil.exception(AppResourceErrorCodeConstants.PAGE_NOT_EXIST);
         }
@@ -56,7 +54,7 @@ public class PageServiceImpl implements PageService {
     @Override
     public Long createPage(CreatePageDTO createPageDTO) {
         PageDO pageDO = BeanUtils.toBean(createPageDTO, PageDO.class);
-        pageDO = pageDataRepository.insert(pageDO);
+        pageRepository.save(pageDO);
         return pageDO.getId();
     }
 
@@ -71,18 +69,18 @@ public class PageServiceImpl implements PageService {
 
         String viewType = createPageViewDTO.getViewType();
 
-        if (viewType.equals(ViewEnmu.MIX.getValue())){
+        if (viewType.equals(ViewEnmu.MIX.getValue())) {
             formPageDO.setEditViewMode(1);
             formPageDO.setDetailViewMode(1);
         }
-        if (viewType.equals(ViewEnmu.EDIT.getValue())){
+        if (viewType.equals(ViewEnmu.EDIT.getValue())) {
             formPageDO.setEditViewMode(1);
         }
-        if (viewType.equals(ViewEnmu.DETAIL.getValue())){
+        if (viewType.equals(ViewEnmu.DETAIL.getValue())) {
             formPageDO.setDetailViewMode(1);
         }
 
-        pageDataRepository.insert(formPageDO);
+        pageRepository.save(formPageDO);
 
         PageSetPageDO formPageSetPageDO = new PageSetPageDO();
         formPageSetPageDO.setPageSetId(createPageViewDTO.getPageSetId());
@@ -91,14 +89,14 @@ public class PageServiceImpl implements PageService {
         formPageSetPageDO.setIsDefault(0);
         formPageSetPageDO.setDefaultSeq(1);
 
-        pageSetPageDataRepository.insert(formPageSetPageDO);
+        pageSetPageRepository.save(formPageSetPageDO);
 
         return formPageDO.getId();
     }
 
     @Override
     public Boolean updatePageName(UpdatePageNameDTO updatePageNameDTO) {
-        pageDataRepository.updatePageName(updatePageNameDTO.getPageId(), updatePageNameDTO.getPageName());
+        pageRepository.updatePageName(updatePageNameDTO.getPageId(), updatePageNameDTO.getPageName());
         return true;
     }
 
@@ -106,9 +104,9 @@ public class PageServiceImpl implements PageService {
     @Transactional(rollbackFor = Exception.class)
     public Boolean deletePage(Long pageId) {
         // 删除页面集关联的页面
-        pageSetPageDataRepository.deleteByPageId(pageId);
+        pageSetPageRepository.deleteByPageId(pageId);
         // 删除页面
-        pageDataRepository.deleteById(pageId);
+        pageRepository.removeById(pageId);
 
         return true;
     }
@@ -118,28 +116,29 @@ public class PageServiceImpl implements PageService {
         ConfigStore configs = new DefaultConfigStore();
         configs.eq("application_id", appId);
 
-        List<MenuDO> menuDOList = menuDataRepository.findAllByConfig(configs);
+        List<MenuDO> menuDOList = menuDataRepository.findByApplicationId(appId);
         List<Long> menuIdList = menuDOList.stream()
                 .map(MenuDO::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         configs = new DefaultConfigStore();
         configs.in(Compare.EMPTY_VALUE_SWITCH.BREAK, "menu_id", menuIdList, true, true);
 
-        List<PageSetDO> pageSetDoList = pageSetDataRepository.findAllByConfig(configs);
+//        List<PageSetDO> pageSetDoList = pageSetRepository.findAllByConfig(configs);
+//
+//        List<Long> pageSetIdList = pageSetDoList.stream()
+//                .map(PageSetDO::getId)
+//                .collect(Collectors.toList());
+//
+//        configs = new DefaultConfigStore();
+//        configs.in(Compare.EMPTY_VALUE_SWITCH.BREAK, "pageset_id", pageSetIdList, true, true);
+//        configs.eq("page_type", PageEnum.FORM.getValue());
+//        List<PageDO> pageDOList = pageRepository.findAllByConfig(configs);
 
-        List<Long> pageSetIdList = pageSetDoList.stream()
-                .map(PageSetDO::getId)
-                .collect(Collectors.toList());
+//        List<PageDTO> pageDTOList = BeanUtils.toBean(pageDOList, PageDTO.class);
 
-        configs = new DefaultConfigStore();
-        configs.in(Compare.EMPTY_VALUE_SWITCH.BREAK, "pageset_id", pageSetIdList, true, true);
-        configs.eq("page_type", PageEnum.FORM.getValue());
-        List<PageDO> pageDOList = pageDataRepository.findAllByConfig(configs);
-
-        List<PageDTO> pageDTOList = BeanUtils.toBean(pageDOList, PageDTO.class);
-
-        return pageDTOList;
+//        return pageDTOList;
+        return null;
     }
 
     @Override
@@ -147,19 +146,15 @@ public class PageServiceImpl implements PageService {
         ConfigStore configs = new DefaultConfigStore();
         configs.eq("page_id", pageId);
 
-        PageSetPageDO pageSetPageDO =pageSetPageDataRepository.findByPageId(pageId);
-        PageSetDO pageSetDO =  pageSetDataRepository.findById(pageSetPageDO.getPageSetId());
+        PageSetPageDO pageSetPageDO = pageSetPageRepository.findByPageId(pageId);
+        PageSetDO pageSetDO = pageSetRepository.getById(pageSetPageDO.getPageSetId());
 
         return pageSetDO.getMainMetadata();
     }
 
     @Override
     public List<PageDTO> listPageView(Long pageSetId) {
-        ConfigStore configs = new DefaultConfigStore();
-        configs.eq("pageset_id", pageSetId);
-        configs.eq("page_type",  PageEnum.FORM.getValue());
-
-        List<PageDO> pageDOList = pageDataRepository.findAllByConfig(configs);
+        List<PageDO> pageDOList = pageRepository.findAllFormPageByPageSetId(pageSetId);
         List<PageDTO> pageDTOList = BeanUtils.toBean(pageDOList, PageDTO.class);
 
         return pageDTOList;
